--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,8 @@
 <template>
-  <h1>${message}</h1>
+  <require from="font-awesome.css"></require>
+  <require from="./styles/app.css"></require>
+  <require from="./layouts/header-layout"></require>
+
+  <header-layout router-config.bind="router.currentInstruction.config"></header-layout>
+  <router-view></router-view>
 </template>
