--- a/src/pages/auth/auth.html
+++ b/src/pages/auth/auth.html
@@ -14,6 +14,7 @@
               Need an account?
             </a>
           </p>
+          <error-list errors.bind="errors"></error-list>
           <form submit.delegate="submit()">
             <div class="form-group" if.bind="type === 'register'">
               <input type="text" class="form-control form-control-lg" placeholder="Username"
