--- a/src/pages/article/article.html
+++ b/src/pages/article/article.html
@@ -19,6 +19,10 @@
           <p innerhtml.bind="article.body | formatHtml"></p>
         </div>
       </div>
+      <hr>
+      <div class="article-actions">
+        <article-meta article.bind="article"></article-meta>
+      </div>
     </div>
   </section>
 </template>
