Add favorite article feature

--- a/src/pages/article/article-meta.html
+++ b/src/pages/article/article-meta.html
@@ -23,5 +23,10 @@
         &nbsp;Delete Article
       </button>
     </span>
+    <span if.bind="!canModify">
+      <favorite-button article.bind="article">
+        &nbsp;(${article.favoritesCount})
+      </favorite-button>
+    </span>
   </div>
 </template>
