--- a/src/pages/user/profile.html
+++ b/src/pages/user/profile.html
@@ -21,5 +21,28 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-10 offset-md-1">
+          <div class="articles-toggle">
+            <ul class="nav nav-pills outline-active">
+              <li class="nav-item">
+                <a class="nav-link ${activeRoute === 'user-articles' ? 'active' : ''}"
+                   route-href="route: user-articles">
+                  My Articles
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ${activeRoute === 'favorite-articles' ? 'active' : ''}"
+                   route-href="route: favorite-articles">
+                  Favorited Articles
+                </a>
+              </li>
+            </ul>
+          </div>
+          <router-view></router-view>
+        </div>
+      </div>
+    </div>
   </section>
 </template>
