--- a/src/pages/article/editor.html
+++ b/src/pages/article/editor.html
@@ -18,9 +18,9 @@
                         value.bind="article.body & validate">
               </textarea>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary float-right" disabled.bind="!canSave">
+            <submit-button is-requesting.bind="isRequesting" can-submit.bind="canSave">
               Publish Article
-            </button>
+            </submit-button>
           </form>
         </div>
       </div>
